--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Localy Doumentation Page</title>
-        <meta charset="UTF-8">
-        <meta name="description" content = "This is my first website">
 
 
-    </head>
-    <p>This app does not have any features or issues that require a Documenation, Please enjoy Localy Mississauga and shop Local!
-    <body style="background-color: lightblue;">
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title class="Name">Aryan Thomare </title>
+    <script src="script.js"></script>
+
+    <meta name="description" content="Team Wesbite for Mentor College Wrestling">
+</head>
+
+
+<body class="body" id="body">
+
+<div class = "sidebar">
+
+    <image class = 'profilepic' src = 'Images/placeholder.png'></image>
+
+    <h1 class="Name"><u>Aryan Thomare</u></h1>
+
+    <h3 class = "subtit">Coder • Athlete • Tech Enthusiast</h3>
+</div>
+
+<!-- Buttons -->
+
+
+
+
+
+</body>
 </html>
+
+
