--- a/index.html
+++ b/index.html
@@ -4,34 +4,50 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title class="Name">Aryan Thomare </title>
     <script src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Team Wesbite for Mentor College Wrestling">
+    <meta name="description" content="Aryan Thomare Personal Website">
 </head>
 
 
-<body class="body" id="body">
+<body class="body" id="body" onload="gradient(); drawoncanv();">
+<canvas id="mainCanvas"></canvas>
+<div class="topbar" id="topbar">
+        <div class="namediv" id="namediv">
+            <h1 class="Name" id="Name"><span class = 'backgtitle'>Aryan Thomare</span></h1>
+        </div>
 
-<div class = "sidebar">
+        <ul class="topnav" id="topnav">
+            <li><a href="#news" class="about">About</a></li>
+            <li><a href="#news"  class="proj">Projects</a></li>
+            <li><a href="#news"  class="cont" id="cont">Contact</a></li>
 
-    <image class = 'profilepic' src = 'Images/placeholder.png'></image>
-
-    <h1 class="Name"><u>Aryan Thomare</u></h1>
-
-    <h3 class = "subtit">Coder • Athlete • Tech Enthusiast</h3>
+        </ul>
 </div>
 
-<!-- Buttons -->
+<!--
+<div class="sidebar">
 
+    <div class = "title" id = 'title'>
+        <h1 class="Name"><span class = 'backgtitle'><u>Aryan Thomare</u></span></h1>
+        <h3 class = "subtit">Coder • Athlete • Tech Enthusiast</h3>
+    </div>
 
+    <div class = "menubar" id = 'menubar'>
+        <button class = 'b1'>HI</button>
+    </div>
+</div>
+-->
 
 
 
 </body>
 </html>
-
 
