--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div id= "cborder3" class= "projectrow">
             <p class="ptitle">Brain Computer Interface - EEG</p>
             <p class="pdesc">A Live data collector and graph creator for all sensors included in the Muse 2 headband </p>
-            <button class="moreinfo">More Info</button>
+            <button class="moreinfo" onclick="changepage4()">More Info</button>
 
         </div>
 
@@ -101,7 +101,7 @@
       <div id= "cborder6" class= "projectrowbottom">
             <p class="ptitle">Other Projects</p>
             <p class="pdesc">Smaller Fun Projects</p>
-            <button class="moreinfo">More Info</button>
+            <button class="moreinfo" onclick="changepage5()">More Info</button>
 
         </div>
 
