--- a/art.html
+++ b/art.html
@@ -23,6 +23,7 @@
     </style>
     <meta name="description" content="Aryan Thomare Personal Website">
 	<link rel="icon" href="images/wicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/wicon.ico">
 
 </head>
 
