--- a/work.html
+++ b/work.html
@@ -15,7 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="workstyle.css">
     <title class="Name">Aryan Thomare </title>
-
+	<link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16" />
+	
     <meta charset="utf-8">
 </head>
 
